[project]
name = "winnougan-power-lora-loader"
description = "A powerful, flexible LoRA loader node for ComfyUI with toggle, reorder, and multi-strength support."
version = "2.0.9"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/YOUR_USERNAME/winnougan-power-lora-loader"

[tool.comfy]
PublisherId = "winnougan"
DisplayName = "Winnougan Power Lora Loader"
Icon = "https://your-icon-url.png"
